style: fix the overflow of show sextion

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ button{
     font-weight: initial;
     text-shadow: 1.3px 1.3px #383838;
     box-sizing: border-box; 
+    overflow: scroll;
 }
 
 #double{
